2002-01-26  Glynn Foster  <glynn.foster@sun.com>

	* panel-per-panel-config.schemas: Bugger, forgot to hide the hide
	buttons.

2002-01-26  Glynn Foster  <glynn.foster@sun.com>

	* applet.c: Change right-stick to panel-right-stick. It still doesn't 
	really describe to the user what it is, but it's a bit more intuitive.
	* panel-per-panel-config.schemas: Add in a few applets and change things
	around according to Nils' proposal. [Still perhaps missing some icons?].

2002-01-26  Roy-Magne Mo <rmo@sunnmore.net>

	* panel.hints: syncronizing panel.hints 
	  with the gnome-1-4 core. This means
          adding nn and sl languages.

Thu Jan 24 16:20:47 2002  George Lebl <jirka@5z.com>

	* menu.c: fix the reposition hack not to spew warnings

Wed Jan 23 18:20:13 2002  George Lebl <jirka@5z.com>

	* menu.[ch], menu-util.c, applet.c, foobar-widget.c:  Make sure
	  menus appear within xinerama boundaries.  Those that don't like
	  menu.c style of coding should NOT look at this code.  But it
	  works.

	* multiscreen-stuff.c: reorder the screens in the fake debugging
	  setup.

	* basep-widget.c: fix screen_change signal signature

	* foobar-widget.c: add some corners.  Yay we half look like a mac
	  now.  Now if we could only get bottom corners as well.  Maybe
	  in time.

2002-01-23  Padraig O'Briain  <padraig.obriain@sun.com>

	* applet.c: Add applet_do_popup_menu() and applet_popup_menu() to
	support popping up of menu using Shift+F10 for buttons on the panel.

	* basep_widget.c (base_widget_focus_return):
	Update to forget previously focussed widget so that Ctrl+Tab followed
	by Tab gives always gives focus to first button 

	* menu.c: Add menu_button_menu_popup() and menu_button_notify() to
	support menu popup when menu icon receives focus.
	Define callback for "clicked" to be menu_button_pressed so that
	pressing Enter or Space on a focussed menu icon activates its menu.
	
Tue Jan 22 16:11:47 2002  George Lebl <jirka@5z.com>
