@@ -1,3 +1,7 @@
+2002-01-27  Glynn Foster  <glynn.foster@sun.com>
+
+	* foobar-widget.c, panel.c: Hopefully fixes bug #69838.
+
 2002-01-26  Glynn Foster  <glynn.foster@sun.com>
 
 	* panel-per-panel-config.schemas: Bugger, forgot to hide the hide
